--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,33 @@
 
     <div id="root"></div>
     <canvas id="grass-canvas"></canvas>
+
+    <div id="stars"></div>
+
+<script>
+  function calculatePosition(){
+    let noOfStars = 100
+    let starsContainer = document.querySelector("#stars");
+    for (let i = 0; i < noOfStars; i++) {
+      let starDiv = document.createElement("div", "");
+      starDiv.className = "star";
+      starsContainer.appendChild(starDiv);
+    }
+    let stars = document.querySelectorAll(".star");
+    stars.forEach((star) => {
+      let starSize = Math.floor(Math.random() * (6-1)+1);
+      let randVerticalPos = Math.floor(Math.random() * 101);
+      let randHorizontalPos = Math.floor(Math.random() * 101);
+      star.style.right = randHorizontalPos + "%";
+      star.style.top = randVerticalPos + "%";
+      star.style.width = starSize + "px";
+      star.style.height = starSize + "px";
+      star.style.animationDelay = randVerticalPos + "s";
+    });
+  };
+  calculatePosition();
+</script>
+
     <script>
     /**
      * Original version http://labs.hyperandroid.com/js1k
@@ -32,11 +59,11 @@
         color:       null,  // grass color. modified by ambient component.
         offset_control_point:   3,    // grass base width. greater values, wider at the basement.
 
-        initialize : function(canvasWidth, canvasHeight, minHeight, maxHeight, angleMax, initialMaxAngle)  {
+        initialize : function(renderCnvWidth, renderCnvHeight, minHeight, maxHeight, angleMax, initialMaxAngle)  {
 
           // grass start position
-          var sx= Math.floor( Math.random()*canvasWidth );
-          var sy= canvasHeight;
+          var sx= Math.floor( Math.random()*renderCnvWidth );
+          var sy= renderCnvHeight;
 
           // quadric curve middle control point. higher values means wider grass from base to peak.
           // try offset_control_x=10 for thicker grass.
@@ -87,7 +114,7 @@
 
         /**
          * paint every grass.
-         * @param ctx is the canvas2drendering context
+         * @param ctx is the renderCnv2drendering context
          * @param time for grass animation.
          * @param ambient parameter to dim or brighten every grass.
          * @returns nothing
@@ -151,7 +178,7 @@
                 width,
                 height,
                 50,      // min grass height
-                height*1/9, // max grass height
+                height, // max grass height
                 20,     // grass max initial random angle
                 40      // max random angle for animation
                 );
@@ -169,39 +196,39 @@
           ctx.save();
           this.ambient = 0.05137999999999998;
 
-          // draw stars if ambient below .3 -> night
-          if ( this.ambient<0.3 )  {
-
-            // modify stars translucency by ambient (as transitioning to day, make them dissapear).
-            ctx.globalAlpha= 1-((this.ambient-0.05)/0.25);
-
-            // as well as making them dimmer
-            intensity= 1 - (this.ambient/2-0.05)/0.25;
-
-            // how white do you want the stars to be ??
-            var c= Math.floor( 192*intensity );
-            var strc= 'rgb('+c+','+c+','+c+')';
-            ctx.strokeStyle=strc;
-
-            // first num_fireflyes coordinates are fireflyes themshelves.
-            for( var j=this.num_fireflyes*2; j<this.stars.length; j+=2 )  {
-              var inc=1;
-
-              // every one out of 3 stars move at 1.5 increment
-              if ( j%3===0 ) {
-                inc=1.5;
-              } else if ( j%11===0 ) {
-              // every one out of 11 stars move at 2.5 increment
-                inc=2.5;
-              }
-              // all the others at increment 1
-              this.stars[j]= (this.stars[j]+0.1*inc)%canvas.width;
-
-              var y= this.stars[j+1];
-              ctx.strokeRect(this.stars[j],this.stars[j+1],1,1);
-
-            }
-          }
+          // // draw stars if ambient below .3 -> night
+          // if ( this.ambient<0.3 )  {
+          //
+          //   // modify stars translucency by ambient (as transitioning to day, make them dissapear).
+          //   ctx.globalAlpha= 1-((this.ambient-0.05)/0.25);
+          //
+          //   // as well as making them dimmer
+          //   intensity= 1 - (this.ambient/2-0.05)/0.25;
+          //
+          //   // how white do you want the stars to be ??
+          //   var c= Math.floor( 192*intensity );
+          //   var strc= 'rgb('+c+','+c+','+c+')';
+          //   ctx.strokeStyle=strc;
+          //
+          //   // first num_fireflyes coordinates are fireflyes themshelves.
+          //   for( var j=this.num_fireflyes*2; j<this.stars.length; j+=2 )  {
+          //     var inc=1;
+          //
+          //     // every one out of 3 stars move at 1.5 increment
+          //     if ( j%3===0 ) {
+          //       inc=1.5;
+          //     } else if ( j%11===0 ) {
+          //     // every one out of 11 stars move at 2.5 increment
+          //       inc=2.5;
+          //     }
+          //     // all the others at increment 1
+          //     this.stars[j]= (this.stars[j]+0.1*inc)%renderCnv.width;
+          //
+          //     var y= this.stars[j+1];
+          //     ctx.strokeRect(this.stars[j],this.stars[j+1],1,1);
+          //
+          //   }
+          // }
 
           ctx.globalAlpha= 1;
 
@@ -237,8 +264,9 @@
 
 
         window.animGrass = function()    {
-          ctx.fillStyle= gradient;
-          ctx.fillRect(0,0,canvas.width,canvas.height);
+          //ctx.fillStyle= gradient;
+          ctx.clearRect(0,0,renderCnv.width,renderCnv.height);
+          context.clearRect(0,0,renderCnv.width,renderCnv.height);
           var ntime= new Date().getTime();
           var elapsed= ntime-time;
           garden.paint( ctx, elapsed );
@@ -250,7 +278,7 @@
           //     lerp( (elapsed-nextLerpTime)%nextLerpTime, lerpTime );
           //   }
           // }
-
+          context.drawImage(renderCnv, 0, 0);
         }
 
         /**
@@ -260,7 +288,7 @@
          */
         function lerp( time, last ) {
 
-          gradient= ctx.createLinearGradient(0,0,0,canvas.height);
+          gradient= ctx.createLinearGradient(0,0,0,renderCnv.height);
 
 
           var i0= lerpindex%colors.length;
@@ -283,7 +311,7 @@
     var nextLerpTime= 15000;  // after fading, how much time to wait to fade colors again.
 
     var interval= null;
-    var canvas= null;
+    var renderCnv= null;
     var ctx= null;
     var garden= null;
 
@@ -292,18 +320,25 @@
 
         window.initGarden = function(images) {
 
-            canvas= document.getElementById('grass-canvas');
-            ctx= canvas.getContext('2d');
-            canvas.width= window.innerWidth;
-            canvas.height=window.innerHeight;
+            renderCnv= document.createElement('canvas');
+            displayCnv = document.getElementById('grass-canvas'); //render offscreen and copy to display cnv
+            context = displayCnv.getContext('2d');
+            ctx= renderCnv.getContext('2d');
+            renderCnv.width= window.innerWidth;
+            renderCnv.height=window.innerHeight/4.5;
+            displayCnv.width= window.innerWidth;
+            displayCnv.height=window.innerHeight/4.5;
+
 
             garden= new Garden();
-            garden.initialize(canvas.width, canvas.height, 300);
+            garden.initialize(renderCnv.width, renderCnv.height, 300);
 
             window.addEventListener('resize', (e)=>{
-              canvas.width = window.innerWidth;
-              canvas.height = window.innerHeight;
-              garden.initialize(canvas.width, canvas.height, 300);
+              renderCnv.width = window.innerWidth;
+              renderCnv.height = window.innerHeight/4.5;
+              displayCnv.width= window.innerWidth;
+              displayCnv.height=window.innerHeight/4.5;
+              garden.initialize(renderCnv.width, renderCnv.height, 300);
               animGrass();
             })
 
