--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
 
 <script>
   function calculatePosition(){
-    let noOfStars = 100
+    let noOfStars = 125;
     let starsContainer = document.querySelector("#stars");
     for (let i = 0; i < noOfStars; i++) {
       let starDiv = document.createElement("div", "");
-      starDiv.className = "star";
+      starDiv.className = "star-anim star";
       starsContainer.appendChild(starDiv);
     }
     let stars = document.querySelectorAll(".star");
@@ -324,19 +324,19 @@
             displayCnv = document.getElementById('grass-canvas'); //render offscreen and copy to display cnv
             context = displayCnv.getContext('2d');
             ctx= renderCnv.getContext('2d');
-            renderCnv.width= window.innerWidth * 1.35;
+            renderCnv.width= window.innerWidth;
             renderCnv.height=window.innerHeight/4.5;
-            displayCnv.width= window.innerWidth * 1.35;
+            displayCnv.width= window.innerWidth;
             displayCnv.height=window.innerHeight/4.5;
 
 
             garden= new Garden();
-            garden.initialize(renderCnv.width, renderCnv.height, 300);
+            garden.initialize(renderCnv.width, renderCnv.height, 180);
 
             window.addEventListener('resize', (e)=>{
-              renderCnv.width = window.innerWidth * 1.35;
+              renderCnv.width = window.innerWidth;
               renderCnv.height = window.innerHeight/4.5;
-              displayCnv.width= window.innerWidth * 1.35;
+              displayCnv.width= window.innerWidth;
               displayCnv.height=window.innerHeight/4.5;
               garden.initialize(renderCnv.width, renderCnv.height, 300);
               animGrass();
